--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
  <div *ngIf="!registerMode" style="text-align: center;">
 <h1> Win your bet! </h1>
-<p class="lead">Come on to win prove you're right... all you need is to sign up </p>
+<p class="lead">Come on, prove you're right! All you need is to sign up </p>
 <div class="text-center">
   <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
   <button class="btn btn-info btn-lg">Learn more</button>
