--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,15 +1,45 @@
-<form #registerForm="ngForm" (ngSubmit)="register()" autocomplete="off">
+<form [formGroup]="registerForm" (ngSubmit)="register()" autocomplete="off">
 <h2 class="text-center text-primary">
   Sign up
 </h2>
 <div class="form-group">
-  <input type="text" class="form-control" name="username" [(ngModel)]="model.username" placeholder="Username">
+  <input
+  [class.is-invalid]='registerForm.get("username").errors && registerForm.get("username").touched'
+  type="text"
+  class="form-control"
+   formControlName="username"
+    placeholder="Username">
+    <div class="invalid-feedback">Please enter username</div>
 </div>
 <div class="form-group">
-  <input type="text" class="form-control" name="password" type="password" [(ngModel)]="model.password" placeholder="Password">
+  <input [class.is-invalid]='registerForm.get("password").errors
+   && registerForm.get("password").touched' type="text"
+   class="form-control"
+     type="password"
+     formControlName="password"
+     placeholder="Password">
+    <div *ngIf="registerForm.get('password').hasError('required')" class="invalid-feedback">Please enter a password</div>
+    <div *ngIf="registerForm.get('password').hasError('minlength')" class="invalid-feedback">Enter at least 4 characters</div>
+    <div *ngIf="registerForm.get('password').hasError('maxlength')" class="invalid-feedback">Enter less than 9 characters</div>
+</div>
+<div class="form-group">
+  <input
+  [class.is-invalid]='registerForm.get("confirmPassword").errors
+   && registerForm.get("confirmPassword").touched'
+   type="text"
+    class="form-control"
+    type="password"
+     formControlName="confirmPassword"
+      placeholder="Confirm Password">
+      <div *ngIf="registerForm.get('confirmPassword').hasError('required')" class="invalid-feedback">Please enter a password</div>
+      <div *ngIf="registerForm.get('confirmPassword').hasError('isMatching')" class="invalid-feedback"> Passwords must match </div>
 </div>
 <div class="form-group text-center">
   <button class="btn btn-success mr-2" type="submit">Register</button>
   <button (click)="cancel()" class="btn btn-default mr-2" type="button">Cancel</button>
 </div>
 </form>
+
+<p>Form value: {{registerForm.value | json}}</p>
+<p>Form status: {{registerForm.status | json}}</p>
+
