--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,38 +2,9 @@
 <h2 class="text-center text-primary">
   Sign up
 </h2>
-<div class="form-group">
-  <input
-  [class.is-invalid]='registerForm.get("username").errors && registerForm.get("username").touched'
-  type="text"
-  class="form-control"
-   formControlName="username"
-    placeholder="Username">
-    <div class="invalid-feedback">Please enter username</div>
-</div>
-<div class="form-group">
-  <input [class.is-invalid]='registerForm.get("password").errors
-   && registerForm.get("password").touched' type="text"
-   class="form-control"
-     type="password"
-     formControlName="password"
-     placeholder="Password">
-    <div *ngIf="registerForm.get('password').hasError('required')" class="invalid-feedback">Please enter a password</div>
-    <div *ngIf="registerForm.get('password').hasError('minlength')" class="invalid-feedback">Enter at least 4 characters</div>
-    <div *ngIf="registerForm.get('password').hasError('maxlength')" class="invalid-feedback">Enter less than 9 characters</div>
-</div>
-<div class="form-group">
-  <input
-  [class.is-invalid]='registerForm.get("confirmPassword").errors
-   && registerForm.get("confirmPassword").touched'
-   type="text"
-    class="form-control"
-    type="password"
-     formControlName="confirmPassword"
-      placeholder="Confirm Password">
-      <div *ngIf="registerForm.get('confirmPassword').hasError('required')" class="invalid-feedback">Please enter a password</div>
-      <div *ngIf="registerForm.get('confirmPassword').hasError('isMatching')" class="invalid-feedback"> Passwords must match </div>
-</div>
+<app-text-input [formControl]='registerForm.controls["username"]' [label]='"Username"'></app-text-input>
+<app-text-input [formControl]='registerForm.controls["password"]' [label]='"Password"' [type]='"password"'></app-text-input>
+<app-text-input [formControl]='registerForm.controls["confirmPassword"]' [type]='"password"' [label]='"Confirm Password"'></app-text-input>
 <div class="form-group text-center">
   <button class="btn btn-success mr-2" type="submit">Register</button>
   <button (click)="cancel()" class="btn btn-default mr-2" type="button">Cancel</button>
