--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -4,7 +4,8 @@
 <p class="lead">Come on, prove you're right! All you need is to sign up </p>
 <div class="text-center">
   <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
-  <button class="btn btn-info btn-lg">Learn more</button>
+  <button class="btn btn-info btn-lg mr-2">Learn more</button>
+  <button (click)="showInfo()" class="btn btn-info btn-lg" style="background-color: red;">Learn EVEN more</button>
 </div>
 </div>
 
