--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -29,6 +29,18 @@
     <button (click)="resetFilters()" class="btn btn-info ml-1">
       Reset filters
     </button>
+    <div class="col">
+<div class="btn-group float-right">
+  <button type="button" class="btn btn-primary" name='orderBy' (click)="loadMembers()" btnRadio='lastActive'
+    [(ngModel)]="userParams.orderBy">
+    Last Active
+  </button>
+  <button type="button" class="btn btn-primary" name='orderBy' (click)="loadMembers()" btnRadio='created'
+    [(ngModel)]="userParams.orderBy">
+    Newest members
+  </button>
+    </div>
+    </div>
   </form>
 </div>
 
